--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
+    "gatsby-plugin-scss-typescript": "^4.0.10",
     "gh-pages": "^2.0.1",
+    "node-sass": "^4.13.0",
     "prettier": "^1.17.0",
     "remark-cli": "^7.0.0",
     "remark-preset-lint-recommended": "^3.0.2",
