--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-share": "^3.0.1",
     "react-twitter-widgets": "^1.7.1",
     "react-typography": "^0.16.19",
+    "react-visibility-sensor": "^5.1.1",
     "typography": "^0.16.19",
     "typography-theme-alton": "^0.16.19",
     "url-join": "^4.0.0"
