--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-catch-links": "^2.1.12",
     "gatsby-plugin-feed": "^2.3.15",
     "gatsby-plugin-google-analytics": "^2.1.19",
+    "gatsby-plugin-less": "^3.0.18",
     "gatsby-plugin-lodash": "^3.1.10",
     "gatsby-plugin-manifest": "^2.2.20",
     "gatsby-plugin-netlify-cms": "^4.1.22",
@@ -21,7 +22,6 @@
     "gatsby-plugin-sitemap": "^2.2.16",
     "gatsby-plugin-twitter": "^2.1.9",
     "gatsby-plugin-typescript": "^2.1.26",
-    "gatsby-plugin-typography": "^2.3.21",
     "gatsby-remark-autolink-headers": "^2.1.13",
     "gatsby-remark-copy-linked-files": "^2.1.23",
     "gatsby-remark-images": "^3.1.25",
@@ -30,9 +30,12 @@
     "gatsby-source-filesystem": "^2.1.28",
     "gatsby-transformer-remark": "^2.6.26",
     "gatsby-transformer-sharp": "^2.2.19",
+    "gray-percentage": "^2.0.0",
+    "less": "^3.10.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "netlify-cms-app": "^2.9.7",
+    "normalize.css": "^8.0.1",
     "prismjs": "^1.16.0",
     "react": "^16.10.1",
     "react-disqus-comments": "^1.4.0",
@@ -40,9 +43,7 @@
     "react-helmet": "^5.2.1",
     "react-share": "^3.0.1",
     "react-twitter-widgets": "^1.7.1",
-    "react-typography": "^0.16.19",
     "react-visibility-sensor": "^5.1.1",
-    "typography": "^0.16.19",
     "typography-theme-alton": "^0.16.19",
     "url-join": "^4.0.0"
   },
