--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-transformer-remark": "^2.6.26",
     "gatsby-transformer-sharp": "^2.2.19",
     "gray-percentage": "^2.0.0",
+    "lazysizes": "^5.2.0",
     "less": "^3.10.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
@@ -43,6 +44,7 @@
     "react-dom": "^16.10.1",
     "react-helmet": "^5.2.1",
     "react-share": "^3.0.1",
+    "react-spring": "^8.0.27",
     "react-twitter-widgets": "^1.7.1",
     "react-visibility-sensor": "^5.1.1",
     "typography-theme-alton": "^0.16.19",
