--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,21 +16,15 @@ collections:
     fields:
       - { label: "Name", name: "name", widget: "string" }
       - { label: "Description", name: "description", widget: "string" }
+      - { label: "Details And Fit", name: "detailsAndFit", widget: "list" }
       - { label: "Feature Image", name: "featureImage", widget: "image" }
-      - { label: "Gallery",
+      - {
+          label: "Gallery",
           name: "galleryImages",
           widget: "list",
-          field: {label: "Image", name: "image", widget: "image"}
+          field: { label: "Image", name: "image", widget: "image" },
         }
       - { label: "Price", name: "price", widget: "string" }
       - { label: "Category", name: "category", widget: "string" }
-      - { 
-          label: "Sizes", 
-          name: "sizes", 
-          widget: "list"
-        }
-      - { 
-          label: "Tags", 
-          name: "tags", 
-          widget: "list"
-        }
+      - { label: "Sizes", name: "sizes", widget: "list" }
+      - { label: "Tags", name: "tags", widget: "list" }
