--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "antd": "^3.26.6",
     "gatsby": "^2.15.28",
+    "gatsby-background-image": "^0.9.14",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-antd": "^2.1.0",
     "gatsby-plugin-catch-links": "^2.1.12",
