--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
-    "antd": "^3.26.6",
-    "gatsby": "^2.15.28",
-    "gatsby-background-image": "^0.9.14",
-    "gatsby-image": "^2.2.39",
+    "antd": "^3.26.9",
+    "firebase": "^7.8.2",
+    "gatsby": "^2.19.17",
+    "gatsby-background-image": "^0.9.17",
+    "gatsby-image": "^2.2.41",
     "gatsby-plugin-antd": "^2.1.0",
     "gatsby-plugin-catch-links": "^2.1.12",
     "gatsby-plugin-feed": "^2.3.15",
@@ -35,12 +36,12 @@
     "gatsby-transformer-sharp": "^2.3.13",
     "gray-percentage": "^2.0.0",
     "lazysizes": "^5.2.0",
-    "less": "^3.10.3",
+    "less": "^3.11.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "netlify-cms-app": "^2.9.7",
+    "netlify-cms-app": "^2.11.19",
     "normalize.css": "^8.0.1",
-    "prismjs": "^1.16.0",
+    "prismjs": "^1.19.0",
     "react": "^16.10.1",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.10.1",
@@ -53,28 +54,28 @@
     "url-join": "^4.0.0"
   },
   "devDependencies": {
-    "@types/node": "^13.1.6",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
-    "@typescript-eslint/eslint-plugin": "^2.16.0",
-    "@typescript-eslint/parser": "^2.16.0",
+    "@types/node": "^13.7.1",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
     "cli-glob": "^0.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-import": "^2.17.2",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0",
-    "gh-pages": "^2.0.1",
-    "node-sass": "^4.13.0",
+    "eslint-plugin-react": "^7.18.3",
+    "gh-pages": "^2.2.0",
+    "node-sass": "^4.13.1",
     "prettier": "^1.17.0",
     "remark-cli": "^7.0.0",
     "remark-preset-lint-recommended": "^3.0.2",
     "stylelint": "^11.0.0",
     "stylelint-config-prettier": "^6.0.0",
     "stylelint-config-standard": "^19.0.0",
-    "typescript": "^3.7.4",
+    "typescript": "^3.7.5",
     "write-good": "^1.0.1"
   },
   "keywords": [
