--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-remark-prismjs": "^3.3.16",
     "gatsby-remark-responsive-iframe": "^2.2.20",
     "gatsby-source-filesystem": "^2.1.28",
+    "gatsby-transformer-cloudinary": "^0.3.1",
     "gatsby-transformer-remark": "^2.6.26",
     "gatsby-transformer-sharp": "^2.3.13",
     "gray-percentage": "^2.0.0",
