--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-antd": "^2.1.0",
     "gatsby-plugin-catch-links": "^2.1.12",
+    "gatsby-plugin-create-client-paths": "^2.1.22",
     "gatsby-plugin-feed": "^2.3.15",
     "gatsby-plugin-google-analytics": "^2.1.19",
     "gatsby-plugin-less": "^3.0.18",
