--- a/package.json
+++ b/package.json
@@ -69,7 +69,10 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "gh-pages": "^2.2.0",
+    "http-proxy-middleware": "^1.0.0",
+    "netlify-lambda": "^1.6.3",
     "node-sass": "^4.13.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.17.0",
     "remark-cli": "^7.0.0",
     "remark-preset-lint-recommended": "^3.0.2",
@@ -88,13 +91,18 @@
     "develop": "gatsby develop",
     "dev": "npm run develop",
     "serve": "gatsby serve",
-    "build": "gatsby build",
     "build:pp": "gatsby build --prefix-paths",
     "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
     "clean": "rm -rf public && rm -rf .cache",
     "lint": "eslint --ignore-path .gitignore . --ext ts --ext tsx --ext js --ext jsx",
     "lint:md": "remark content/",
-    "write-good": "write-good $(glob 'content/posts/**/*.md')"
+    "write-good": "write-good $(glob 'content/posts/**/*.md')",
+    "start": "run-p start:**",
+    "start:app": "npm run develop",
+    "start:lambda": "netlify-lambda serve src/functions",
+    "build": "gatsby build && netlify-lambda build src/functions",
+    "build:app": "gatsby build",
+    "build:lambda": "netlify-lambda build src/functions"
   },
   "remarkConfig": {
     "plugins": [
