--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
+    "@sendgrid/mail": "^6.5.3",
     "antd": "^3.26.9",
     "firebase": "^7.8.2",
     "gatsby": "^2.19.17",
