--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "npm run build"
-  functions = "src/functions"
+  functions = "functions"
   publish = "public"
 [build.environment]
   NODE_VERSION = "12.13.0"
