--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
+    "flickity": "^2.2.1",
+    "gatsby-source-instagram": "^0.6.1",
     "gh-pages": "^2.2.0",
     "http-proxy-middleware": "^1.0.0",
     "netlify-lambda": "^1.6.3",
