--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.17.0",
+    "react-parallax": "^3.0.3",
     "remark-cli": "^7.0.0",
     "remark-preset-lint-recommended": "^3.0.2",
     "stylelint": "^11.0.0",
