--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@sendgrid/mail": "^6.5.3",
     "antd": "^3.26.9",
     "firebase": "^7.8.2",
