--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,8 @@
 backend:
   name: github # Refer to https://www.netlifycms.org/docs/authentication-backends/ for auth backend list and instructions
   branch: master # Branch to update
-  repo: hgkhanh/Chérie # Repo for pushing new commits. Make sure to replace with your repo!
+  repo: hgkhanh/cherie # Repo for pushing new commits. Make sure to replace with your repo!
+
 
 media_folder: content/images
 public_folder: images
