--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -29,3 +29,13 @@ collections:
       - { label: "Category", name: "category", widget: "string" }
       - { label: "Sizes", name: "sizes", widget: "list" }
       - { label: "Tags", name: "tags", widget: "list" }
+  - name: post
+    label: "Post"
+    folder: "content/posts"
+    create: true
+    fields:
+      - { label: Title, name: title }
+      - { label: Date, name: date, , widget: date }
+      - { label: Cover, name: cover, , widget: image }
+      - { label: Body, name: body, widget: markdown }
+    
