--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -35,7 +35,7 @@ collections:
     create: true
     fields:
       - { label: Title, name: title }
-      - { label: Date, name: date, , widget: date }
-      - { label: Cover, name: cover, , widget: image }
+      - { label: Date, name: date, widget: date }
+      - { label: Cover, name: cover, widget: image }
       - { label: Body, name: body, widget: markdown }
     
