--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-manifest": "^2.3.6",
     "gatsby-plugin-netlify": "^2.2.3",
     "gatsby-plugin-netlify-cms": "^4.2.4",
+    "gatsby-plugin-netlify-cms-paths": "^1.3.0",
     "gatsby-plugin-nprogress": "^2.2.3",
     "gatsby-plugin-offline": "^3.1.4",
     "gatsby-plugin-react-helmet": "^3.2.4",
