Dev env; Klarna init

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,8 @@
   NODE_VERSION = "12.13.0"
   YARN_VERSION = "1.19.1"
   YARN_FLAGS = "--no-ignore-optional"
+# Specific branch context:
+# Deploys from this branch will take these settings
+# and override their current ones.
+[context.dev]
+  command = "GATSBY_ACTIVE_ENV=development npm run build"
