--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -26,6 +26,7 @@ collections:
           field: { label: "Image", name: "image", widget: "image" },
         }
       - { label: "Price", name: "price", widget: "string" }
+      - { label: "Sale Price", name: "salePrice", widget: "string" }
       - { label: "Category", name: "category", widget: "string" }
       - { label: "Sizes", name: "sizes", widget: "list" }
       - { label: "Tags", name: "tags", widget: "list" }
