--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-antd": "^2.2.0",
     "gatsby-plugin-catch-links": "^2.3.5",
     "gatsby-plugin-create-client-paths": "^2.3.4",
+    "gatsby-plugin-facebook-pixel": "^1.0.3",
     "gatsby-plugin-feed": "^2.5.5",
     "gatsby-plugin-google-analytics": "^2.3.4",
     "gatsby-plugin-less": "^3.2.4",
