--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
+    "dev": "gatsby develop",
     "develop": "gatsby develop",
     "start": "run-p start:**",
     "start:app": "npm run develop",
