--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.10",
     "@sendgrid/mail": "^6.5.5",
     "antd": "^3.26.17",
+    "classnames": "^2.2.6",
     "firebase": "^7.15.0",
     "gatsby": "^2.23.3",
     "gatsby-background-image": "^0.9.17",
@@ -49,7 +50,6 @@
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
     "netlify-cms-app": "^2.12.14",
-    "normalize.css": "^8.0.1",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-disqus-comments": "^1.4.0",
