--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.10",
     "@sendgrid/mail": "^6.5.5",
+    "@types/jest": "^26.0.14",
+    "@types/react-test-renderer": "^16.9.3",
     "antd": "^3.26.17",
     "classnames": "^2.2.6",
+    "enzyme": "^3.11.0",
     "firebase": "^7.15.0",
     "gatsby": "^2.23.3",
     "gatsby-background-image": "^0.9.17",
@@ -68,6 +71,8 @@
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
+    "babel-jest": "^26.3.0",
+    "babel-preset-gatsby": "^0.5.11",
     "base-64": "^0.1.0",
     "cli-glob": "^0.1.0",
     "eslint": "^6.8.0",
@@ -81,11 +86,14 @@
     "gatsby-source-instagram": "^0.6.1",
     "gh-pages": "^2.2.0",
     "http-proxy-middleware": "^1.0.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.4.2",
     "netlify-lambda": "^1.6.3",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.17.0",
     "react-parallax": "^3.0.3",
+    "react-test-renderer": "^16.13.1",
     "remark-cli": "^7.0.0",
     "remark-preset-lint-recommended": "^3.0.4",
     "stylelint": "^11.0.0",
@@ -100,6 +108,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
+    "test": "jest",
     "dev": "gatsby develop",
     "develop": "gatsby develop",
     "start": "run-p start:**",
